# baidu_sync_for_windows

./: .gitignore  README.md  config.toml  pyproject.toml
.cursor/: settings.json
src/baidu_sync_for_windows/: main.py  utils.py
src/baidu_sync_for_windows/cache/: __init__.py  models.py  redis_cache.py  service.py
src/baidu_sync_for_windows/config/: __init__.py  base.py  compress.py  database.py  hash.py  logger.py  oauth.py  scan.py  scheduler.py  source.py  upload.py  verify.py
src/baidu_sync_for_windows/dtos/: __init__.py  backup.py  compress.py  hash.py  oauth.py  scan.py  scheduler.py  verify.py
src/baidu_sync_for_windows/exception/: __init__.py  base.py  compress.py  hash.py  scan.py  scheduler.py  upload.py  verify.py
src/baidu_sync_for_windows/logger/: __init__.py  log.py
src/baidu_sync_for_windows/models/: __init__.py  base.py  oauth.py  service.py
src/baidu_sync_for_windows/repository/: __init__.py  base.py  default.py  mysql.py  new.py  test.py
src/baidu_sync_for_windows/repository/mysql/: __init__.py  backup_strategy.py  base.py  compress_strategy.py  default.py  encrypt_name_compress_strategy.py  hash_strategy.py  interface.py  oauth_repository.py  repository.py  sacn_strategy.py  scheduler_repository.py  verify_strategy.py
src/baidu_sync_for_windows/service/: __init__.py  backup.py  cncrypt_name_compress.py  compress.py  encrypt_name_compress.py  hash.py  scan.py  scheduler.py  verify.py
temp/: a.py  b.py
test_case/: test_cache.py  test_encrypt_name.py  test_hash.py  test_redis.py  test_redis_cache_service.py  test_repo.py  test_scan.py
