[project]
name = "baidu-sync-for-windows"
version = "0.1.7"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "dowhen>=0.1.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pymysql>=1.1.2",
    "pyzipper>=0.3.6",
    "sqlalchemy>=2.0.46",
    "sqlmodel>=0.0.37",
    "tenacity>=9.1.4",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/baidu_sync_for_windows"]
